SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/Contract_Entitlement__c.object-meta.xml
<CustomObject>
    <description>Entitlement line item for a given contract</description>
    <label>Contract Entitlement</label>
    <nameField>
        <label>Contract Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>