SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Contract to which the entitlement belongs</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Entitlements</relationshipLabel>
    <relationshipName>Contract_Entitlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>