SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/CPQ_Playbook_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Action that added this Entitlement Line Item</description>
    <label>CPQ Playbook Rule Action</label>
    <referenceTo>CPQ_Playbook_Rule_Action__c</referenceTo>
    <relationshipLabel>Contract Entitlements</relationshipLabel>
    <relationshipName>Contract_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>