SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of entitlement</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>