SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Original list price before any pricing adjustments</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>