SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 record for entitlement</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Entitlements</relationshipLabel>
    <relationshipName>Contract_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>