SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Quote Line Item that generated entitlement</description>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Contract Entitlements</relationshipLabel>
    <relationshipName>Contract_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>