SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of entitlement</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>