SFDC_LD_Packages/CPQ/main/default/objects/Contract_Entitlement__c/fields/SubTotal_Price__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Price__c</fullName>
    <formula>List_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>